qa/apps/fhir-server/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fhir-server
  name: fhir-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fhir-server
  template:
    metadata:
      labels:
        app: fhir-server
    spec:
      volumes:
      - name: postgres-ca-certificate
        secret:
          secretName: postgres-qa-ca-certificate
          defaultMode: 0555
      - name: ingress-ca-certificate
        secret:
          secretName: cqdg-ingress-ca-certificate
          defaultMode: 0555
      - name: entrypoint
        configMap:
          name: fhir-entrypoint
          defaultMode: 0555
      imagePullSecrets:
      - name: images-registry-credentials
      containers:
      - image: index.docker.io/ferlabcrsj/cqdg-fhir-server:532d460b73b7c8e95bde52aac9af1ebb0808d83e-1679344266 # {"$imagepolicy": "cqdg-qa-fluxcd:fhir-server"}
        name: fhir-server
        resources:
          requests:
            memory: "2048Mi"
            cpu: "1.00"
          limits:
            memory: "4096Mi"
            cpu: "2.00"
        command: ["/opt/entrypoint/entrypoint.sh"]
        volumeMounts:
        - name: postgres-ca-certificate
          mountPath: /opt/ca
          readOnly: true
        - name: ingress-ca-certificate
          mountPath: /opt/ingress-ca
          readOnly: true
        - name: entrypoint
          mountPath: /opt/entrypoint
