qa/apps/fhir-server/services.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fhir-server
  name: fhir-server
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: fhir-server
